syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpc";
option java_outer_classname = "HelloProto";

package com.example.grpc;

import "google/protobuf/empty.proto";

service HelloService {
  rpc SayHello (HelloRequest) returns (HelloResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}

// Order service definitions
message Order {
  int64 orderId = 1;
  string product = 2;
  int32 quantity = 3;
}

message OrderId {
  int64 id = 1;
}

message OrderList {
  repeated Order orders = 1;
}

service OrderService {
  rpc CreateOrder (Order) returns (Order);
  rpc GetOrder (OrderId) returns (Order);
  rpc ListOrders (google.protobuf.Empty) returns (OrderList);
  rpc UpdateOrder (Order) returns (Order);
  rpc DeleteOrder (OrderId) returns (google.protobuf.Empty);
}